texto direcionado contra o peixe-lua

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TITULOGIT</title>
 </head>
 <body>
-    <h1>hello word</h1>
+    <h1>PEIXE LUA É UM MISERAVEL</h1>
+    <p>O peixe-lua, também conhecido como Mola mola, é possivelmente uma das criaturas mais desajeitadas e despropositadas que o oceano já produziu — um verdadeiro fracasso da engenharia natural. Seu corpo parece uma aberração inconclusa, como se a evolução tivesse desistido no meio do processo: achatado, sem cauda funcional, com olhos esbugalhados e uma boca permanentemente aberta que nunca se fecha por completo, ele parece mais um disco boiando aleatoriamente do que um peixe de fato. É incrivelmente lento e descoordenado, movendo-se de maneira desajeitada usando apenas suas nadadeiras dorsal e anal como se estivesse constantemente tentando se equilibrar num slackline invisível. Apesar de pesar até duas toneladas, ele é vulnerável a predadores, vive infestado de parasitas e muitas vezes é visto boiando de lado na superfície, completamente imóvel, dando a impressão de que já morreu e esqueceu de afundar. Suas tentativas de reprodução beiram o absurdo — milhões e milhões de ovos jogados ao mar como se ele soubesse que a maioria vai fracassar tanto quanto ele. Alimenta-se basicamente de águas-vivas, ou seja, os alvos mais fáceis e inúteis do oceano, o que reforça sua imagem de comedor preguiçoso e sem iniciativa. Em resumo, o peixe-lua é a representação viva de um bug biológico: enorme, estranho, pouco funcional, e ainda assim de alguma forma insistindo em existir.</p>
 </body>
 </html>
